[gd_scene load_steps=9 format=2]

[ext_resource path="res://Juego/Naves/Estaciones/ReleMasa/spaceStation_029.png" type="Texture" id=1]
[ext_resource path="res://Juego/Naves/Estaciones/ReleMasa/spaceStation_028.png" type="Texture" id=2]
[ext_resource path="res://Juego/Naves/Estaciones/ReleMasa/lowFrequency_explosion_000.ogg" type="AudioStream" id=3]
[ext_resource path="res://Juego/Naves/Estaciones/ReleMasa/ReleMasa.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "super_activada"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/SpriteArriba:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1, 1.4, 1.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.937255, 0.133333, 0.917647, 1 ), Color( 1, 1, 1, 1 ), Color( 0.937255, 0.133333, 0.917647, 1 ), Color( 1, 1, 1, 1 ), Color( 0.937255, 0.133333, 0.917647, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/SpaceMedio:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.8, 1, 1.2, 1.4, 1.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.937255, 0.133333, 0.917647, 1 ), Color( 1, 1, 1, 1 ), Color( 0.937255, 0.133333, 0.917647, 1 ), Color( 1, 1, 1, 1 ), Color( 0.937255, 0.133333, 0.917647, 1 ), Color( 1, 1, 1, 1 ), Color( 0.937255, 0.133333, 0.917647, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/SpaceAbajo:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1, 1.4, 1.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.937255, 0.133333, 0.917647, 1 ), Color( 1, 1, 1, 1 ), Color( 0.937255, 0.133333, 0.917647, 1 ), Color( 1, 1, 1, 1 ), Color( 0.937255, 0.133333, 0.917647, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ActivadoSFX:stream")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ActivadoSFX:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ActivadoSFX:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "spawn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 2, 2 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 324.025

[node name="ReleMasa" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprites" type="Node2D" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
rotation = 0.719146
scale = Vector2( 1e-05, 1e-05 )

[node name="SpriteArriba" type="Sprite" parent="Sprites"]
modulate = Color( 0.952123, 0.3387, 0.937162, 1 )
position = Vector2( 1, -46 )
texture = ExtResource( 2 )

[node name="SpaceMedio" type="Sprite" parent="Sprites"]
modulate = Color( 0.952123, 0.3387, 0.937162, 1 )
texture = ExtResource( 1 )

[node name="SpaceAbajo" type="Sprite" parent="Sprites"]
modulate = Color( 0.952123, 0.3387, 0.937162, 1 )
position = Vector2( 0, 46 )
rotation = 3.14159
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spawn"
anims/activada = SubResource( 1 )
anims/default = SubResource( 2 )
anims/spawn = SubResource( 3 )
anims/super_activada = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="ActivadoSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="DetectorPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorPlayer"]
shape = SubResource( 5 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="DetectorPlayer" to="." method="_on_DetectorPlayer_body_entered"]
